# esp32-lib

./: LICENSE  README.md
components/esp_component/: .eil.yml  CMakeLists.txt  Kconfig  esp_component.c
components/esp_component/include/: esp_component.h
components/i2cbus/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  i2cbus.c
components/i2cbus/include/: i2cbus.h
components/lcd_i2c/: .eil.yml  CMakeLists.txt  Kconfig  lcd_i2c.c
components/lcd_i2c/include/: lcd_i2c.h  lcd_i2c_const.h
examples/esp_app/: .gitignore  CMakeLists.txt
examples/esp_app/main/: CMakeLists.txt
examples/i2c_example/: CMakeLists.txt  README.md
examples/i2c_example/main/: main.c
examples/lcd_example/: CMakeLists.txt
examples/lcd_example/main/: main.c
